tests/paczka1/fuzzy1/17694836.err
Error in line 5: WnOZ S299 80,0
Error in line 14: YwXs5v A437 91,8
Error in line 29: S928 S928 65,0
Error in line 27: tDPrlCp A437 55,1
Error in line 31: YwXs5v A437 85,3
Error in line 25: WnOZ S928 31,4
